tests/ppx/meth.expected
Characters 40-43:
  fun (obj : int) -> obj##m
                     ^^^
Error: This expression has type int but an expression was expected of type
         < .. > Js.t
Characters 25-28:
  fun (obj : < > Js.t) -> obj##m
                          ^^^
Error: This expression has type <  >
       It has no method m
Characters 43-49:
  fun (obj : < m : float Js.prop > Js.t) -> obj##m
                                            ^^^^^^
Error: This expression has type
         float Js.prop = < get : float; set : float -> unit > Js.gen_prop
       but an expression was expected of type 'a Js.meth
Characters 43-49:
  fun (obj : < m : float Js.meth > Js.t) -> obj##m + 1
                                            ^^^^^^
Error: This expression has type float but an expression was expected of type
         int
Characters 48-54:
  fun (obj : < m : int -> int Js.meth > Js.t) -> obj##m + 1
                                                 ^^^^^^
Error: This expression has type int -> int Js.meth
       but an expression was expected of type 'a Js.meth
Characters 41-47:
  fun (obj : < m : int Js.meth > Js.t) -> obj##m 1
                                          ^^^^^^
Error: This expression has type int Js.meth
       but an expression was expected of type int -> 'a Js.meth
Characters 50-58:
  fun (obj : < m : int -> float Js.meth > Js.t) -> obj##m 1 + 1
                                                   ^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
Characters 80-83:
  fun (obj : < m : 'a. 'a -> unit Js.meth > Js.t) -> obj##m "string"; obj##m (); obj##w
                                                                                 ^^^
Error: This expression has type < m : 'a. 'a -> unit Js.meth >
       It has no method w

